----------------------------------------
Release Notes for TriBITS
----------------------------------------

2020/06/16:

(*) MINOR: The variables <Package>_FORTRAN_COMPILER and
    <Package>_FORTRAN_FLAGS in the <Package>Config.cmake files (in the build
    dir and the install dir) are deprecated.  Please use the new variables
    <Package>_Fortran_COMPILER and <Package>_Fortran_FLAGS.  (Justification:
    In raw CMake, the compiler is called 'Fortran', not 'FORTRAN'.  Also, the
    name 'Fortran' is already used in the <Project>Config.cmake file.)

2020/04/16:

(*) MAJOR: TriBITS Core: CMAKE_CXX_STANDARD is now always set to at least 11
    to enable C++11 support.  The ${PROJECT_NAME}_ENABLE_CXX11 option has been
    removed, but a variable of the same name is hard-coded to ON for
    compatibility.

(*) MAJOR: TriBITS Core: CMAKE_CXX_FLAGS will no longer contain an explicit
    C++ standard option like '-std=c++11'.  TriBITS clients' dependents
    using CMake will still compile with support for C++11 language constructs
    because libraries come with INTERFACE_COMPILE_FEATURES including cxx_std_11.
    However, those using Makefile.export.<Package> files will no longer get
    a '-std=c++11` flag from TriBITS.

2018/10/10:

(*) MAJOR: TriBITS Core: Changed minimum CMake version from 2.8.11 to 3.10.0.

2017/09/25:

(*) MINOR: TriBITS CTest Driver: Added cache and enve vars
    CTEST_SUBMIT_RETRY_COUNT and CTEST_SUBMIT_RETRY_DELAY to allow the number
    of ctest_submit() submit attemtps to retry and how how log to pause
    between retries.  Before, these were hard-coded to 25 and 120
    respectively, which means that something like a MySQL insertion error
    could consume as much as 50 minutes befor moving on!  The new defalts are
    set at 5 retries with a 3 sec delay (which appear to be the CTest
    defaults).

2017/09/30:

(*) MINOR: TriBITS Core: Added TEST_<IDX> COPY_FILES_TO_TEST_DIR block for