@@ -592,15 +592,16 @@ ENDFUNCTION()
 
 
 #
-# Read ${TEST_NAME_IN}_SET_DISABLED_AND_MSG and set output
-# var SET_DISABLED_AND_MSG_OUT
+# Read ${TEST_NAME_IN}_SET_DISABLED_AND_MSG and set output var
+# <setDisabledAndMsgOut> as used by the TRIBITS_ADD[_ADVANCED]_TEST()
+# functions.
 #
 # Usage:
 #
 #    TRIBITS_SET_DISABLED_AND_MSG(
 #      <testName>              # The full test name passed to add_test()
-#      "${PARSE_DISABLED}"     # From the input arg "DISABLED <msg>"
-#      <setDisabledAndMsgOut>  # Sets var of this name
+#      "${PARSE_DISABLED}"     # From the input arg "DISABLED <msg>" to TA[A]T()
+#      <setDisabledAndMsgOut>  # Sets var of this name on output
 #      )
 #
 FUNCTION(TRIBITS_SET_DISABLED_AND_MSG  TEST_NAME_IN  PARSE_DISABLED
@@ -608,7 +609,7 @@ FUNCTION(TRIBITS_SET_DISABLED_AND_MSG  TEST_NAME_IN  PARSE_DISABLED
   )
 
   SET(SET_DISABLED_AND_MSG "${PARSE_DISABLED}")
-  IF (NOT "${${TEST_NAME_IN}_SET_DISABLED_AND_MSG}" STREQUAL "")
+  IF (NOT "${${TEST_NAME_IN}_SET_DISABLED_AND_MSG}" STREQUAL "") # Override!
     SET(SET_DISABLED_AND_MSG "${${TEST_NAME_IN}_SET_DISABLED_AND_MSG}")
   ENDIF()
 
@@ -618,15 +619,15 @@ ENDFUNCTION()
 
 
 #
-# Read ${TEST_NAME_IN}_SET_RUN_SERIAL and set output
-# var SET_RUN_SERIAL_OUT
+# Read ${TEST_NAME_IN}_SET_RUN_SERIAL and set output var SET_RUN_SERIAL_OUT as
+# used by the TRIBITS_ADD[_ADVANCED]_TEST() functions.
 #
 # Usage:
 #
 #    TRIBITS_SET_RUN_SERIAL(
 #      <testName>              # The full test name passed to add_test()
-#      "${PARSE_RUN_SERIAL}"   # From the input option "RUN_SERIAL"
-#      <setRunSerial>          # Sets var of this name
+#      "${PARSE_RUN_SERIAL}"   # From the input option "RUN_SERIAL" to TA[A]T()
+#      <setRunSerialOut>       # Sets var of this name on output
 #      )
 #
 FUNCTION(TRIBITS_SET_RUN_SERIAL  TEST_NAME_IN  PARSE_RUN_SERIAL
@@ -634,7 +635,7 @@ FUNCTION(TRIBITS_SET_RUN_SERIAL  TEST_NAME_IN  PARSE_RUN_SERIAL
   )
 
   SET(SET_RUN_SERIAL "${PARSE_RUN_SERIAL}")
-  IF (NOT "${${TEST_NAME_IN}_SET_RUN_SERIAL}" STREQUAL "")
+  IF (NOT "${${TEST_NAME_IN}_SET_RUN_SERIAL}" STREQUAL "") # Override!
     SET(SET_RUN_SERIAL "${${TEST_NAME_IN}_SET_RUN_SERIAL}")
   ENDIF()
 
@@ -699,11 +700,11 @@ ENDFUNCTION()
 FUNCTION(TRIBITS_ADD_TEST_ADD_TEST TEST_NAME EXE_NAME)
 
   IF (TRIBITS_ADD_TEST_ADD_TEST_CAPTURE)
-    APPEND_GLOBAL_SET(TRIBITS_ADD_TEST_ADD_TEST_INPUT ${TEST_NAME} ${ARGN})
+    APPEND_GLOBAL_SET(TRIBITS_ADD_TEST_ADD_TEST_INPUT NAME ${TEST_NAME} COMMAND ${ARGN})
   ENDIF()
 
   IF (NOT TRIBITS_ADD_TEST_ADD_TEST_UNITTEST)
-    ADD_TEST(${TEST_NAME} ${ARGN})
+    ADD_TEST(NAME ${TEST_NAME} COMMAND ${ARGN})
   ENDIF()
 
   TRIBITS_SET_TESTS_PROPERTIES(${TEST_NAME} PROPERTIES REQUIRED_FILES ${EXE_NAME})
